vbnc/vbnc/tests/Errors/30311-25.vb
Class T
    Const M_Double As Single = "c"c
End Class